fix: author list not wrapping

--- a/assets/css/releases/4.6.css
+++ b/assets/css/releases/4.6.css
@@ -155,6 +155,11 @@ body {
         border-bottom: solid;
       }
     }
+    ul{
+      padding-left: 1.4em;
+    }
+    li{
+    }
   }
   .link-icon{
     display: flex;
